# Jetson-Linear-Algebra-Lirbary

./: CMakeLists.txt  Cmakelists.txt  README.md
include/jla/: jla.h  jla_types.h
src/api/: api.cpp  elementwise.cpp  gemm.cpp  gemm.txt  internal_common.hpp  transpose.cpp
src/kernel/: elementwise.cu  elementwise.h  elementwise_kernels.cuh
src/kernels/: elementwise.cu  elementwise.cuh  elementwise.h  elementwise_kernels.cuh  gemm_kernels.cu  gemm_kernels.cuh
src/tensor/: tensor_utils.hpp  tensor_view.hpp
src/utils/: check.cpp
tests/: test_elementwise.cpp  test_gemm.cpp  test_tensorcore.cu
